# substrate-practice

./: .gitignore  Cargo.toml
node/src/: chain_spec.rs
pallets/funding/: Cargo.toml
pallets/funding/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
