[package]
name = "pallet-funding"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true


# [package.metadata.docs.rs]
# targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
# ! Copy from pallets/template
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
frame-support.workspace = true
frame-system.workspace = true
# frame-benchmarking = { optional = true, workspace = true }
# ! Tutorial way -> https://docs.substrate.io/tutorials/collectibles-workshop/03-create-pallet/
# frame-support = { default-features = false, version = "36.0.0" }
# frame-system = { default-features = false, version = "36.0.0" }
# codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
#     "derive",
# ] }
# scale-info = { version = "2.1.1", default-features = false, features = [
#     "derive",
# ] }


[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    # "frame-benchmarking?/std",
]
